# iceberg-compaction

./: .gitignore  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  PR_ISSUES_ANALYSIS.md  README.md  STYLE.md  rust-toolchain  rust-toolchain.toml  rustfmt.toml  taplo.toml  tomlfmt.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/actions/setup-builder/: action.yml
.github/workflows/: ci.yml  ci_typos.yml
codegen/: Cargo.toml  build.rs
codegen/src/: compactor.rs  lib.rs
core/: Cargo.toml
core/proto/: iceberg.proto
core/src/: lib.rs
core/src/common/: metrics.rs  mod.rs
core/src/compaction/: auto.rs  mod.rs  validator.rs
core/src/compaction/tests/: file_group_scope.rs
core/src/compaction_test/: mod.rs
core/src/config/: mod.rs
core/src/error/: mod.rs
core/src/executor/: data_file_size_writer.rs  mock.rs  mod.rs
core/src/executor/datafusion/: datafusion_processor.rs  file_scan_task_table_provider.rs  iceberg_file_task_scan.rs  mod.rs  sql_builder.rs
core/src/executor/datafusion/datafusion_impl/: file_scan_task_table_provider.rs  iceberg_file_task_scan.rs  iceberg_physical_expr.rs  mod.rs
core/src/executor/iceberg_writer/: mod.rs  rolling_iceberg_writer.rs
core/src/file_selection/: analyzer.rs  mod.rs  packer.rs  strategy.rs
core/src/memory_catalog/: mod.rs  namespace_state.rs
core/src/optimizer/: big_size_data_file_without_position.rs  mod.rs
core/src/parser/: mod.rs  proto.rs
core/src/test_utils/: docker_compose.rs  generator.rs  mod.rs
core/src/tests/: docker_compose.rs  generator.rs  mod.rs  test_util.rs
core/test_utils/: generator.rs
core/testdata/: docker-compose.yaml
docker/compactor/: Dockerfile  config.yaml  docker-compose.yml
docs/: compaction-strategy-contract.md
examples/memory-catalog/: Cargo.toml
examples/memory-catalog/src/: main.rs
examples/rest-catalog/: Cargo.toml
examples/rest-catalog/src/: main.rs
integration-tests/: Cargo.toml
integration-tests/src/: docker_compose.rs  integration_tests.rs  lib.rs
integration-tests/src/test_utils/: generator.rs  mod.rs
integration-tests/testdata/: docker-compose.yaml  mock_iceberg.yaml
prost/: Cargo.toml  build.rs
prost/src/: compactor.rs
proto/: iceberg.proto
scripts/: check.sh  setup.sh
services/compactor/: Cargo.toml
services/compactor/src/: config.rs  lib.rs  rpc.rs  server.rs  util.rs
src/: lib.rs
src/config/: mod.rs
src/error/: mod.rs
src/executor/: mock.rs  mod.rs
src/executor/datafusion/: file_scan_task_table_provider.rs  iceberg_file_task_scan.rs  mod.rs
src/meta/: coordinator.rs  mod.rs  scheduler.rs  strategy.rs
