[workspace]
resolver = "2"
members = ["core", "examples/memory-catalog", "examples/rest-catalog"]

[workspace.dependencies]
# Async runtime and utilities
async-stream = "0.3.5"
async-trait = "0.1.86"

# Local workspace members
futures = "0.3.17"
futures-async-stream = "0.2.9"
iceberg-compaction-core = { path = "./core" }

# Data processing and storage
iceberg = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "c27602bbc7bfb2b9bf95cceee2f79c8a9d893385", features = [
    "storage-s3",
    "storage-gcs",
] }
iceberg-catalog-memory = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "c27602bbc7bfb2b9bf95cceee2f79c8a9d893385" }
iceberg-catalog-rest = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "c27602bbc7bfb2b9bf95cceee2f79c8a9d893385" }
iceberg-datafusion = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "c27602bbc7bfb2b9bf95cceee2f79c8a9d893385" }
parquet = { version = "54", features = ["async"] }

# Error handling
thiserror = "2.0.11"
tokio = { version = "1", default-features = false }

# Utilities
tempfile = "3.8"
url = "2"
