[package]
name = "bergloom-codegen"
version = "0.1.0"
edition = "2024"
description = "Protocol Buffers code generation for IC project"

[lib]
name = "bergloom_codegen"
path = "src/lib.rs"

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }