[package]
name = "bergloom-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
bergloom-codegen = {workspace = true}
backon = "1.2.0"
datafusion = "45.0.0"
futures = { workspace = true }
futures-async-stream = { workspace = true }
iceberg = { workspace = true }
iceberg-catalog-sql = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "e026f860432bbdacfa282b9d72b501230ce5ea22" }
iceberg-datafusion = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "e026f860432bbdacfa282b9d72b501230ce5ea22" }
parquet = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sqlx = { version = "0.8.2",default-features = false, features = ["bigdecimal","chrono","json","mysql","postgres","runtime-tokio-native-tls","rust_decimal","sqlite","time","uuid",] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
url = { workspace = true }
serde_json = { workspace = true }
