[package]
name = "iceberg-compaction-integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async runtime
async-stream = { workspace = true }
async-trait = { workspace = true }

# Docker and test utilities
ctor = { workspace = true }

# DataFusion and Parquet
datafusion = { workspace = true }
futures = { workspace = true }

# Iceberg and catalog
iceberg = { workspace = true }
# iceberg-catalog-memory = { workspace = true }
iceberg-catalog-rest = { workspace = true }
# Main library
iceberg-compaction-core = { path = "../core" }
iceberg-datafusion = { workspace = true }
parquet = { workspace = true }
port_scanner = { workspace = true }

# Other utilities
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
