[package]
name = "iceberg-compaction-example"
version = "0.1.0"
edition = "2024"

[dependencies]
iceberg = { workspace = true }
iceberg-catalog-memory = { workspace = true }
iceberg-compaction-core = { workspace = true }
parquet = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
