[package]
name = "ic-service-compactor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "compactor-server"
path = "src/bin/main.rs"

[dependencies]
async-trait = "0.1.86"
ic-codegen = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
ic-core ={ workspace = true }
iceberg = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
