[package]
name = "bergloom-service-compactor"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.86"
bergloom-codegen = { workspace = true }
bergloom-core = { workspace = true }
iceberg = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "compactor-server"
path = "src/bin/main.rs"
